--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,3 @@
-# ============================================================================
-# Azure DevOps Pipeline for Bicep Deployment
-# Roberto
-# Version: 1.0.0
-# ============================================================================
-
 trigger:
   branches:
     include:
@@ -13,87 +7,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  # Variable group containing secrets
   - group: 'bicep-deployment-secrets'
-  
-  # Pipeline variables
   - name: serviceConnection
     value: 'AzureServiceConnection'
-  - name: deploymentMode
-    value: 'Incremental'
-  - name: location
-    value: 'australiaeast'
 
 stages:
-  # STAGE 1: Validate
-  - stage: Validate
-    displayName: 'Validate Bicep'
-    jobs:
-      - job: Validate
-        steps:
-          - checkout: self
-          
-          - task: AzureCLI@2
-            displayName: 'Validate Bicep Templates'
-            inputs:
-              azureSubscription: '$(serviceConnection)'
-              scriptType: 'bash'
-              inlineScript: |
-                echo "Installing Bicep CLI..."
-                az bicep install
-                
-                echo "Validating Bicep files..."
-                az bicep build --file bicep/main.bicep --stdout > /dev/null
-                echo "✅ Bicep validation passed"
-
-  # STAGE 2: Deploy Key Vault (if needed)
-  - stage: DeployKeyVault
-    displayName: 'Deploy Key Vault'
-    dependsOn: Validate
-    condition: succeeded()
-    jobs:
-      - deployment: DeployKeyVault
-        environment: 'Production'
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - checkout: self
-                
-                - task: AzureCLI@2
-                  displayName: 'Get Current User Principal ID'
-                  inputs:
-                    azureSubscription: '$(serviceConnection)'
-                    scriptType: 'bash'
-                    inlineScript: |
-                      echo "Getting current user principal ID..."
-                      PRINCIPAL_ID=$(az ad signed-in-user show --query id -o tsv)
-                      echo "##vso[task.setvariable variable=PRINCIPAL_ID;issecret=true]$PRINCIPAL_ID"
-                
-                - task: AzureCLI@2
-                  displayName: 'Deploy Key Vault'
-                  inputs:
-                    azureSubscription: '$(serviceConnection)'
-                    scriptType: 'bash'
-                    inlineScript: |
-                      echo "Deploying Key Vault..."
-                      
-                      az deployment group create \
-                        --resource-group $(RESOURCE_GROUP_NAME) \
-                        --template-file bicep/keyvault.bicep \
-                        --parameters keyVaultName=$(KEY_VAULT_NAME) \
-                        --parameters location=$(location) \
-                        --parameters adminUsername=$(ADMIN_USERNAME) \
-                        --parameters principalId=$(PRINCIPAL_ID) \
-                        --name "kv-deploy-$(Build.BuildId)"
-                      
-                      echo "✅ Key Vault deployed"
-
-  # STAGE 3: Deploy VM
-  - stage: DeployVM
-    displayName: 'Deploy Virtual Machine'
-    dependsOn: DeployKeyVault
-    condition: succeeded()
+  - stage: Deploy
+    displayName: 'Deploy SQL Server VM'
     jobs:
       - deployment: DeployVM
         environment: 'Production'
@@ -102,53 +22,78 @@ stages:
             deploy:
               steps:
                 - checkout: self
+                  displayName: 'Checkout Code'
                 
                 - task: AzureCLI@2
-                  displayName: 'Deploy VM with SQL Server'
+                  displayName: 'Install Bicep'
                   inputs:
                     azureSubscription: '$(serviceConnection)'
                     scriptType: 'bash'
                     inlineScript: |
-                      echo "Deploying Virtual Machine..."
+                      echo "Installing Bicep CLI..."
+                      az bicep install
+                      echo "Bicep version:"
+                      az bicep version
+                
+                - task: AzureCLI@2
+                  displayName: 'Deploy Virtual Machine'
+                  inputs:
+                    azureSubscription: '$(serviceConnection)'
+                    scriptType: 'bash'
+                    inlineScript: |
+                      echo "=========================================="
+                      echo "Deploying SQL Server VM"
+                      echo "=========================================="
+                      echo "Resource Group: $(RESOURCE_GROUP_NAME)"
+                      echo "VM Name: $(VM_NAME)"
+                      echo "Location: $(LOCATION)"
+                      echo "Key Vault: $(KEY_VAULT_NAME)"
+                      echo ""
                       
+                      # Deploy VM
                       az deployment group create \
                         --resource-group $(RESOURCE_GROUP_NAME) \
                         --template-file bicep/main.bicep \
                         --parameters @bicep/main.bicepparam \
-                        --parameters vnetResourceId=$(VNET_RESOURCE_ID) \
-                        --parameters nsgResourceId=$(NSG_RESOURCE_ID) \
-                        --parameters keyVaultName=$(KEY_VAULT_NAME) \
-                        --parameters location=$(location) \
+                        --parameters vnetResourceId="$(VNET_RESOURCE_ID)" \
+                        --parameters nsgResourceId="$(NSG_RESOURCE_ID)" \
+                        --parameters keyVaultName="$(KEY_VAULT_NAME)" \
+                        --parameters location="$(LOCATION)" \
                         --name "vm-deploy-$(Build.BuildId)"
                       
-                      echo "✅ VM deployment completed"
-
-  # STAGE 4: Configure JIT
-  - stage: ConfigureJIT
-    displayName: 'Configure JIT Access'
-    dependsOn: DeployVM
-    condition: succeeded()
-    jobs:
-      - job: ConfigureJIT
-        steps:
-          - checkout: self
-          
-          - task: PowerShell@2
-            displayName: 'Configure JIT Access'
-            inputs:
-              targetType: 'inline'
-              script: |
-                Write-Host "Configuring JIT Access for VM..."
+                      if [ $? -eq 0 ]; then
+                        echo ""
+                        echo "✅ VM deployment completed successfully!"
+                        echo ""
+                        
+                        # Show outputs
+                        echo "Deployment Outputs:"
+                        az deployment group show \
+                          --resource-group $(RESOURCE_GROUP_NAME) \
+                          --name "vm-deploy-$(Build.BuildId)" \
+                          --query properties.outputs \
+                          -o json
+                      else
+                        echo "❌ VM deployment failed"
+                        exit 1
+                      fi
                 
-                # This requires Microsoft Defender for Servers Plan 2
-                # Manual configuration steps displayed
-                Write-Host "`n📋 MANUAL JIT CONFIGURATION STEPS:"
-                Write-Host "======================================"
-                Write-Host "1. Go to Azure Portal → Microsoft Defender for Cloud"
-                Write-Host "2. Navigate to Workload protections → Just-in-time VM access"
-                Write-Host "3. Find VM: $(VM_NAME)"
-                Write-Host "4. Click 'Enable JIT on 1 VM'"
-                Write-Host "5. Configure RDP port 3389"
-                Write-Host "6. Set max request time: 3 hours"
-                Write-Host "7. Save configuration"
-                Write-Host "`nNote: Requires Microsoft Defender for Servers Plan 2"
+                - task: PowerShell@2
+                  displayName: 'Display Connection Info'
+                  inputs:
+                    targetType: 'inline'
+                    script: |
+                      Write-Host ""
+                      Write-Host "=========================================="
+                      Write-Host "DEPLOYMENT COMPLETE!"
+                      Write-Host "=========================================="
+                      Write-Host ""
+                      Write-Host "VM: $(VM_NAME)"
+                      Write-Host "Admin: $(ADMIN_USERNAME)"
+                      Write-Host "Key Vault: $(KEY_VAULT_NAME)"
+                      Write-Host ""
+                      Write-Host "To retrieve password:"
+                      Write-Host "az keyvault secret show \"
+                      Write-Host "  --vault-name $(KEY_VAULT_NAME) \"
+                      Write-Host "  --name vmAdminPassword \"
+                      Write-Host "  --query value -o tsv"
