--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# ============================================================================
-# Azure DevOps Pipeline for Bicep VM Deployment
-# ============================================================================
-
 trigger:
   branches:
     include:
@@ -11,10 +7,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  # Variable group containing all secrets
   - group: 'bicep-deployment-secrets'
-  
-  # Service connection name (must match Azure DevOps)
   - name: serviceConnection
     value: 'AzureServiceConnection'
 
@@ -23,17 +16,14 @@ stages:
     displayName: 'Deploy SQL Server VM'
     jobs:
       - deployment: DeployVM
-        displayName: 'Deploy Virtual Machine'
         environment: 'Production'
         strategy:
           runOnce:
             deploy:
               steps:
-                # Checkout code from GitHub
                 - checkout: self
                   displayName: 'Checkout Code'
                 
-                # Install Bicep CLI
                 - task: AzureCLI@2
                   displayName: 'Install Bicep CLI'
                   inputs:
@@ -46,7 +36,25 @@ stages:
                       echo "Bicep version:"
                       az bicep version
                 
-                # Deploy Virtual Machine with SQL Server
+                # Get password from Key Vault
+                - task: AzureCLI@2
+                  displayName: 'Get Password from Key Vault'
+                  inputs:
+                    azureSubscription: '$(serviceConnection)'
+                    scriptType: 'bash'
+                    scriptLocation: 'inlineScript'
+                    inlineScript: |
+                      echo "Retrieving password from Key Vault..."
+                      ADMIN_PASSWORD=$(az keyvault secret show \
+                        --vault-name $(KEY_VAULT_NAME) \
+                        --name vmAdminPassword \
+                        --query value -o tsv)
+                      
+                      # Store as secret pipeline variable
+                      echo "##vso[task.setvariable variable=ADMIN_PASSWORD;issecret=true]$ADMIN_PASSWORD"
+                      echo "✅ Password retrieved (not shown for security)"
+                
+                # Deploy VM with password parameter
                 - task: AzureCLI@2
                   displayName: 'Deploy Virtual Machine'
                   inputs:
@@ -63,16 +71,16 @@ stages:
                       echo "Key Vault: $(KEY_VAULT_NAME)"
                       echo ""
                       
-                      # Deploy VM with all parameters passed directly
+                      # Deploy VM with password parameter
                       az deployment group create \
                         --resource-group $(RESOURCE_GROUP_NAME) \
                         --template-file bicep/main.bicep \
                         --parameters vmName="$(VM_NAME)" \
                         --parameters adminUsername="$(ADMIN_USERNAME)" \
+                        --parameters adminPassword="$(ADMIN_PASSWORD)" \
                         --parameters vmSize="Standard_B2s_v2" \
                         --parameters location="$(LOCATION)" \
                         --parameters subnetName="misc" \
-                        --parameters keyVaultSecretName="vmAdminPassword" \
                         --parameters vnetResourceId="$(VNET_RESOURCE_ID)" \
                         --parameters nsgResourceId="$(NSG_RESOURCE_ID)" \
                         --parameters keyVaultName="$(KEY_VAULT_NAME)" \
@@ -81,21 +89,11 @@ stages:
                       if [ $? -eq 0 ]; then
                         echo ""
                         echo "✅ VM deployment completed successfully!"
-                        echo ""
-                        
-                        # Show deployment outputs
-                        echo "Deployment Outputs:"
-                        az deployment group show \
-                          --resource-group $(RESOURCE_GROUP_NAME) \
-                          --name "vm-deploy-$(Build.BuildId)" \
-                          --query properties.outputs \
-                          -o json
                       else
                         echo "❌ VM deployment failed"
                         exit 1
                       fi
                 
-                # Display connection instructions
                 - task: PowerShell@2
                   displayName: 'Display Connection Information'
                   inputs:
@@ -106,33 +104,10 @@ stages:
                       Write-Host "DEPLOYMENT COMPLETE!"
                       Write-Host "=========================================="
                       Write-Host ""
-                      Write-Host "Virtual Machine Details:"
-                      Write-Host "- Name: $(VM_NAME)"
-                      Write-Host "- Admin Username: $(ADMIN_USERNAME)"
-                      Write-Host "- Location: $(LOCATION)"
-                      Write-Host "- Resource Group: $(RESOURCE_GROUP_NAME)"
+                      Write-Host "VM: $(VM_NAME)"
+                      Write-Host "Admin: $(ADMIN_USERNAME)"
+                      Write-Host "Password: Retrieved from Key Vault"
                       Write-Host ""
-                      Write-Host "Key Vault:"
-                      Write-Host "- Name: $(KEY_VAULT_NAME)"
-                      Write-Host "- Secret: vmAdminPassword"
-                      Write-Host ""
-                      Write-Host "NEXT STEPS:"
-                      Write-Host "1. Retrieve password from Key Vault:"
-                      Write-Host "   az keyvault secret show \"
-                      Write-Host "     --vault-name $(KEY_VAULT_NAME) \"
-                      Write-Host "     --name vmAdminPassword \"
-                      Write-Host "     --query value -o tsv"
-                      Write-Host ""
-                      Write-Host "2. Configure JIT Access:"
-                      Write-Host "   - Go to Azure Portal → Microsoft Defender for Cloud"
-                      Write-Host "   - Navigate to 'Workload protections' → 'Just-in-time VM access'"
-                      Write-Host "   - Find VM: $(VM_NAME)"
-                      Write-Host "   - Click 'Enable JIT on 1 VM'"
-                      Write-Host "   - Configure RDP port 3389"
-                      Write-Host "   - Set max request time: 3 hours"
-                      Write-Host "   - Click 'Save'"
-                      Write-Host ""
-                      Write-Host "3. Request JIT access when needed"
-                      Write-Host "4. Connect via RDP with password from Key Vault"
-                      Write-Host ""
-                      Write-Host "✅ Deployment pipeline completed!"
+                      Write-Host "JIT Configuration Required:"
+                      Write-Host "1. Enable Microsoft Defender for Servers"
+                      Write-Host "2. Configure JIT access for port 3389"
